<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Avec</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title">Avec</string>
    <string name="usernameHint">Username</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="loginBtn">Log in</string>
    <string name="signupBtn">New? Sign Up!</string>
    <string name="createBtn">Create account</string>
    <string name="backToLogin">Back to log in page</string>
    <string name="lastfmHint">Last FM username</string>
    <string name="artist_name"/>
    <string name="nearby_username"/>
    <string name="top_three"/>
    <string name="usernameProfileString"/>
    <string name="addFriendStatus"/>
    <string name="username_profile_string"/>
    <string name="topartist">TopArtist</string>
    <string name="chat_preview"/>
    <string name="chat_string"/>

</resources>
